Fixed cat image spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
     background: lightgreen;
   } 
+
+div img {
+    border-radius: 50%;
+    height: 150px;
+    width: 175px;
+    margin-left: auto;
+}
